<resources>
    <string name="app_name">HamBlaster</string>
    <string name="sign_in">Sign In</string>
    <string name="SignInButtonText">Login</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="signin">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="book_succesfully_added">Book successfully added</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with JIIT HUBDATE.</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="facebook_user_email">Facebook User Email : %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with JIIT HUBDATE.</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_book">Sell Book </string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in JIIT HUBDATE now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Password</string>
    <string name="desc_signup">Create an account</string>
    <string name="label_signup">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="event_venue" />
    <string name="venue">Venue</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="choose_date">Choose Date</string>
    <string name="current_date">Current Date:</string>
    <string name="select_date">Select Date</string>
    <string name="spinner_title">Select Hub</string>
    <string name="event_time">Event Time</string>
    <string name="name">Event Name</string>
    <string name="Email">email</string>
    <string name="textview">TextView</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">GDG</string>
    <string name="nav_movies">OSDC</string>
    <string name="nav_notifications1">Notifications</string>
    <string name="nav_settings1">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_knuth">Knuth Hub</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="activity_title_parola_hub">Parola Literary Hub</string>
    <string name="privacy_policy">View Events</string>
    <string name="parola_hub">Parola Literary Hub</string>
    <string name="knuth_hub">Knuth Programming Hub</string>
    <string name="osdc">OSDC</string>
    <string name="music_hub">Crescendo</string>
    <string name="robotics_hub">Robotics</string>
    <string name="thespian_circle">Thespian</string>
    <string name="gdg">GDG</string>
    <string name="IEEE">IEEE</string>
    <string name="button">Button</string>
    <string name="other">Other</string>
    <string name="Event_Name">Event Name</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="enter_date_in_dd_mm_yy_format">Enter date in dd/mm//yy format</string>
    <string name="event_date">Event Date</string>
    <string name="admin">Admin</string>
    <string name="create">Create</string>
    <string name="category">Category:</string>
    <string name="title_activity_event_">Event_Activity</string>
    <string name="buy_books">BUY BOOKS</string>
    <string name="hello">hello</string>
    <string name="set_default_reminder">SET DEFAULT REMINDER</string>
    <string name="set_reminder_for_this_date">SET REMINDER FOR THIS DATE</string>
    <string name="enter_email">Enter Email</string>
    <string name="add_admin_to_hub">ADD ADMIN TO HUB</string>
    <string name="add">ADD</string>
    <string name="phone">Phone</string>
    <string name="title">Title</string>
    <string name="or">or</string>
    <string name="hubs">Hubs</string>
    <string name="Hub">Hub</string>
</resources>