<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pratigya.hamblaster.ParolaActivity">

    <TextView
        android:text="@string/add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="300dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:gravity="center"
        android:textColor="@color/com_facebook_button_background_color_pressed" />
    <TextView
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginTop="380dp"
        android:textColor="@color/authui_colorPrimaryDark"
        android:gravity="center"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btn_buy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@null"
        android:text="@string/buy_books"
        android:textAllCaps="false"
        android:textColor="@color/tw__composer_red"
        android:textSize="30sp" />

    <TextView
        android:text="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="500dp"
        android:textColor="@color/authui_colorPrimaryDark" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/book_email"
        android:layout_weight="1"
        android:layout_marginTop="540dp"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="?attr/actionModeSplitBackground"
        android:textColorLink="?attr/actionModeSplitBackground"
        android:textColorHint="@color/authui_colorAccent"
        tools:ignore="ObsoleteLayoutParam" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/book_phone"
        android:layout_weight="1"
        android:layout_marginTop="580dp"
        android:hint="@string/phone"
        android:maxLines="1"
        android:textColor="?attr/actionModeSplitBackground"
        android:textColorLink="?attr/actionModeSplitBackground"
        android:textColorHint="@color/authui_colorAccent"
        tools:ignore="ObsoleteLayoutParam,TextFields" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/book_title"
        android:layout_weight="1"
        android:layout_marginTop="620dp"
        android:hint="@string/title"
        android:maxLines="1"
        android:textColor="?attr/actionModeSplitBackground"
        android:textColorLink="?attr/actionModeSplitBackground"
        android:textColorHint="@color/authui_colorAccent"
        tools:ignore="ObsoleteLayoutParam" />


    <Button
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:layout_marginTop="660dp"
        android:background="@drawable/com_facebook_button_background"
        android:textColor="@color/btn_logut_bg" />
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_frame1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:layout_marginTop="350dp"
            tools:ignore="HardcodedText,InefficientWeight" />

        <ImageView
            style="@style/ThemeOverlay.FirebaseIcon"
            android:id="@+id/activity_add_admin_icon"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/jiit_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

    </LinearLayout>

</RelativeLayout>
