<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pratigya.hamblaster.AddAdminActivity">

    <TextView
        android:text="@string/add_admin_to_hub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="300dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:gravity="center" />
    <com.example.pratigya.hamblaster.MultiSpinner
        android:id="@+id/mySpinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="#ffffff"
        android:layout_marginTop="580dp" />
    <TextView
        android:text="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="470dp"
        android:textColor="@color/authui_colorPrimaryDark" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/admin_email"
        android:layout_weight="1"
        android:layout_marginTop="500dp"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="?attr/actionModeSplitBackground"
        android:textColorLink="?attr/actionModeSplitBackground"
        android:textColorHint="@color/authui_colorAccent"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:layout_marginTop="630dp"
        android:background="@drawable/com_facebook_button_background"
        android:textColor="@color/btn_logut_bg" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            style="@style/ThemeOverlay.FirebaseIcon"
            android:id="@+id/activity_add_admin_icon"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/jiit_logo"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

    </LinearLayout>

</RelativeLayout>
