<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_height="40dp"

        android:background="@drawable/com_facebook_button_background"
        android:textColor="@android:color/white"
        android:textSize="30sp"

        android:gravity="center"
        android:text="@string/hint_name"
        android:id="@+id/book_title"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent" />

      <TextView
          android:text="@string/title"
          android:id="@+id/book_email"
          android:textColorLink="@android:color/holo_orange_light"
          android:textSize="30sp"
          android:textColor="@color/com_facebook_button_background_color_focused"
          android:background="@drawable/com_facebook_button_background"
          android:gravity="center"
          android:layout_marginTop="140dp"
          android:layout_height="40dp"

          android:layout_width="match_parent" />
      <TextView
          android:text="@string/phone"
          android:id="@+id/book_phone"
          android:textColorLink="@android:color/holo_orange_light"
          android:textSize="30sp"
          android:textColor="@color/com_facebook_button_background_color_focused"
          android:background="@drawable/com_facebook_button_background"
          android:gravity="center"
          android:layout_marginTop="180dp"
          android:layout_height="40dp"
          android:layout_width="match_parent" />
      <!--<TextView
          android:text="@string/venue"
          android:id="@+id/selectedDate"
          android:textColorLink="@android:color/holo_orange_light"
          android:textSize="30sp"
          android:textColor="@color/com_facebook_button_background_color_focused"
          android:background="@drawable/com_facebook_button_background"
          android:gravity="center"
          android:layout_height="40dp"
          android:layout_marginTop="297dp"
          android:layout_marginLeft="300dp"
          tools:ignore="RtlHardcoded"
          android:layout_width="300dp" />-->

</FrameLayout>